--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,8 @@ tokio = { version = "1.6.0", features = ["rt", "net", "sync", "io-util", "time"]
 tokio-stream = "0.1.6"
 tokio-rustls = { version = "0.22.0" }
 tokio-util = { version = "0.6.7", features = ["codec"] }
-tracing = "0.1.26"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
-tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"]}
 uuid = { version = "0.8.2", features = ["v4"] }
 
 [dev-dependencies]
