--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -28,7 +28,7 @@ ring = "0.16.20"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = { version = "1.0.64" }
 tokio = { version = "1.5.0", features = ["rt", "time"]}
-tracing = "0.1.25"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
 unftp-sbe-fs = { version="0.1", path="../unftp-sbe-fs"}
 valid = "0.3.1"
