--- a/crates/unftp-auth-pam/Cargo.toml
+++ b/crates/unftp-auth-pam/Cargo.toml
@@ -21,7 +21,7 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.50"
 libunftp = { version="0.17.4", path="../../"}
-tracing = "0.1.25"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
 
 [target.'cfg(target_family = "unix")'.dependencies]
