--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -20,7 +20,7 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.50"
-futures = {version = "0.3.14", features = ["std"]}
+futures = { version = "0.3.15", default-features = false, features = ["std"] }
 libunftp = { version="0.17.4", path="../../"}
 path_abs = "0.5.0"
 tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
