--- a/crates/unftp-auth-pam/Cargo.toml
+++ b/crates/unftp-auth-pam/Cargo.toml
@@ -26,3 +26,6 @@ tracing-attributes = "0.1.15"
 
 [target.'cfg(target_family = "unix")'.dependencies]
 pam-auth = { package = "pam", version = "0.7.0"}
+
+[dev-dependencies]
+tokio = { version = "1.5.0", features = ["macros"]}
