--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -22,7 +22,6 @@ async-trait = "0.1.50"
 hyper = { version = "0.14.7", features= ["client", "runtime", "stream", "http1"]}
 hyper-rustls = { version = "0.22.1"}
 libunftp = { version="0.17.4", path="../../"}
-unftp-sbe-fs = { version="0.1", path="../unftp-sbe-fs"}
 percent-encoding = { version = "2.1.0"}
 regex = "1.4.6"
 serde = { version = "1.0.125", features = ["derive"] }
@@ -30,7 +29,9 @@ serde_json = { version = "1.0.64"}
 tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time"] }
 tracing = "0.1.25"
 tracing-attributes = "0.1.15"
+unftp-sbe-fs = { version="0.1", path="../unftp-sbe-fs"}
 
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
+tokio = { version = "1.5.0", features = ["macros"] }
