--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,12 +36,12 @@ bytes = "1.0.1"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
 derive_more = { version = "0.99.14", features = ["display"] }
 futures = { version = "0.3.15", default-features = false, features = ["std"] }
+getrandom = "0.2"
 lazy_static = "1.4.0"
 md-5 = "0.9.1"
 moka = "0.3.0"
 prometheus = "0.12.0"
 proxy-protocol = "0.3.0"
-rand = "0.8.3"
 rustls = "0.19.1"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
