--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,3 +58,4 @@ uuid = { version = "0.8.2", features = ["v4"] }
 pretty_assertions = "0.7.1"
 tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"]}
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
+unftp-auth-jsonfile = { path = "../libunftp/crates/unftp-auth-jsonfile"}
