--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,13 +35,13 @@ bitflags = "1.2.1"
 bytes = "1.0.1"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
 derive_more = { version = "0.99.14", features = ["display"] }
-futures = {version = "0.3.15", features = ["std"]}
+futures = { version = "0.3.15", default-features = false, features = ["std"] }
+getrandom = "0.2"
 lazy_static = "1.4.0"
 md-5 = "0.9.1"
 moka = "0.3.0"
 prometheus = "0.12.0"
 proxy-protocol = "0.3.0"
-rand = "0.8.3"
 rustls = "0.19.1"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
@@ -50,9 +50,8 @@ tokio = { version = "1.6.0", features = ["rt", "net", "sync", "io-util", "time"]
 tokio-stream = "0.1.6"
 tokio-rustls = { version = "0.22.0" }
 tokio-util = { version = "0.6.7", features = ["codec"] }
-tracing = "0.1.26"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
-tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"]}
 uuid = { version = "0.8.2", features = ["v4"] }
 
 [dev-dependencies]
