--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -20,12 +20,12 @@ readme = "README.md"
 
 [dependencies]
 async-trait = "0.1.50"
-futures = {version = "0.3.14", features = ["std"]}
+futures = { version = "0.3.15", default-features = false, features = ["std"] }
 libunftp = { version="0.17.4", path="../../"}
 path_abs = "0.5.0"
 tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.5"
-tracing = "0.1.25"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
 
 [dev-dependencies]
@@ -34,9 +34,9 @@ clap = "2.33.3"
 more-asserts = "0.2.1"
 pretty_assertions = "0.7.1"
 pretty_env_logger = "0.4.0"
-rand = "0.8.3"
 slog-async = "2.6.0"
 slog-term = "2.8.0"
 tempfile = "3.2.0"
 tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"]}
 tracing-subscriber = "0.2.15"
+getrandom = "0.2"
