--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -22,7 +22,7 @@ async-trait = "0.1.50"
 base64 = "0.13.0"
 bytes = "1.0.1"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
-futures = {version = "0.3.14", features = ["std"]}
+futures = { version = "0.3.15", default-features = false, features = ["std"] }
 hyper = { version = "0.14.7", features= ["client", "runtime", "stream", "http1"]}
 hyper-rustls = { version = "0.22.1"}
 libunftp = { version="0.17.4", path="../../"}
@@ -33,9 +33,8 @@ serde_json = { version = "1.0.64"}
 tokio = { version = "1.5.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.5"
 tokio-util = { version = "0.6.6", features=["codec", "compat"] }
-tracing = "0.1.25"
+tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
-tracing-futures = { version = "0.2.5", features = ["std", "std-future", "futures-03"]}
 yup-oauth2 = {version = "5.0.3"}
 
 [dev-dependencies]
