JSON Auth: Add per user mTLS CN verification
With this change we adapt the JSON file authenticator we now check the
client certificate of the user if it is present and if there is
something configured for the user in the JSON file.

The JSON file now have a new `client_cert` property:

```
  {
    "username": "hannes",
    "password": "hannes",
    "client_cert": {
      "allowed_cn": "unftp-client.bol.com"
    }
  }
```

This closes #369

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ tokio-util = { version = "0.6.7", features = ["codec"] }
 tracing = { version = "0.1.26", default-features = false }
 tracing-attributes = "0.1.15"
 uuid = { version = "0.8.2", features = ["v4"] }
+x509-parser = "0.9.2"
 
 [dev-dependencies]
 pretty_assertions = "0.7.1"
