--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "libunftp"
-version = "0.17.4"
+version = "0.18.0" # remember to update html_root_url
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -34,20 +34,20 @@ async-trait = "0.1.50"
 bitflags = "1.2.1"
 bytes = "1.0.1"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
-derive_more = { version = "0.99.14", features = ["display"] }
+derive_more = { version = "0.99.16", features = ["display"] }
 futures = { version = "0.3.15", default-features = false, features = ["std"] }
 getrandom = "0.2"
 lazy_static = "1.4.0"
 md-5 = "0.9.1"
-moka = "0.3.1"
+moka = "0.5.0"
 prometheus = { version = "0.12.0", default-features = false }
 proxy-protocol = "0.3.0"
 rustls = "0.19.1"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
-thiserror = "1.0.25"
-tokio = { version = "1.6.1", features = ["rt", "net", "sync", "io-util", "time"] }
-tokio-stream = "0.1.6"
+thiserror = "1.0.26"
+tokio = { version = "1.8.1", features = ["rt", "net", "sync", "io-util", "time"] }
+tokio-stream = "0.1.7"
 tokio-rustls = { version = "0.22.0" }
 tokio-util = { version = "0.6.7", features = ["codec"] }
 tracing = { version = "0.1.26", default-features = false }
@@ -56,6 +56,6 @@ uuid = { version = "0.8.2", features = ["v4"] }
 x509-parser = "0.9.2"
 
 [dev-dependencies]
-pretty_assertions = "0.7.1"
-tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"]}
+pretty_assertions = "0.7.2"
+tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"]}
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
