--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,8 @@ tracing-attributes = "0.1.22"
 uuid = { version = "1.1.2", features = ["v4"] }
 x509-parser = "0.14.0"
 
+downcast-rs = "1.2.0"
+
 [dev-dependencies]
 pretty_assertions = "1.3.0"
 tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
