--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,27 +35,27 @@ bitflags = "1.3.2"
 bytes = "1.1.0"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
 derive_more = { version = "0.99.17", features = ["display"] }
-futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink"] }
+futures-util = { version = "0.3.21", default-features = false, features = ["alloc", "sink"] }
 getrandom = "0.2"
 lazy_static = "1.4.0"
-md-5 = "0.10.0"
-moka = "0.7.1"
+md-5 = "0.10.1"
+moka = "0.7.2"
 prometheus = { version = "0.13.0", default-features = false }
 proxy-protocol = "0.3.0"
-rustls = "0.20.2"
-rustls-pemfile = "0.2.1"
+rustls = "0.20.4"
+rustls-pemfile = "0.3.0"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.0"
 thiserror = "1.0.30"
-tokio = { version = "1.15.0", features = ["macros", "rt", "net", "sync", "io-util", "time"] }
+tokio = { version = "1.17.0", features = ["macros", "rt", "net", "sync", "io-util", "time"] }
 tokio-rustls = { version = "0.23.2" }
-tokio-util = { version = "0.6.9", features = ["codec"] }
-tracing = { version = "0.1.29", default-features = false }
-tracing-attributes = "0.1.18"
-uuid = { version = "0.8.2", features = ["v4"] }
-x509-parser = "0.12.0"
+tokio-util = { version = "0.7.0", features = ["codec"] }
+tracing = { version = "0.1.32", default-features = false }
+tracing-attributes = "0.1.20"
+uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
+x509-parser = "0.13.0"
 
 [dev-dependencies]
-pretty_assertions = "1.0.0"
-tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"]}
+pretty_assertions = "1.2.0"
+tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"]}
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
