--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -39,7 +39,7 @@ yup-oauth2 = {version = "6.5.1"}
 
 [dev-dependencies]
 async_ftp = "6.0.0"
-clap = "2.34.0"
+clap = { version = "3.1.18", features = ["env"] }
 lazy_static = "1.4.0"
 more-asserts = "0.2.2"
 path_abs = "0.5.1"
