--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,32 +30,32 @@ members = [
 ]
 
 [dependencies]
-async-trait = "0.1.53"
+async-trait = "0.1.56"
 bitflags = "1.3.2"
 bytes = "1.1.0"
 chrono = { version = "0.4.19", default-features = false, features = ["std"] }
 derive_more = { version = "0.99.17", features = ["display"] }
 futures-util = { version = "0.3.21", default-features = false, features = ["alloc", "sink"] }
-getrandom = "0.2"
+getrandom = "0.2.7"
 lazy_static = "1.4.0"
 md-5 = "0.10.1"
-moka = "0.8.2"
-prometheus = { version = "0.13.0", default-features = false }
+moka = "0.8.5"
+prometheus = { version = "0.13.1", default-features = false }
 proxy-protocol = "0.5.0"
-rustls = "0.20.4"
+rustls = "0.20.6"
 rustls-pemfile = "1.0.0"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.1"
-thiserror = "1.0.30"
-tokio = { version = "1.17.0", features = ["macros", "rt", "net", "sync", "io-util", "time"] }
-tokio-rustls = { version = "0.23.3" }
-tokio-util = { version = "0.7.1", features = ["codec"] }
-tracing = { version = "0.1.34", default-features = false }
-tracing-attributes = "0.1.20"
-uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
+thiserror = "1.0.31"
+tokio = { version = "1.19.2", features = ["macros", "rt", "net", "sync", "io-util", "time"] }
+tokio-rustls = "0.23.4"
+tokio-util = { version = "0.7.3", features = ["codec"] }
+tracing = { version = "0.1.35", default-features = false }
+tracing-attributes = "0.1.21"
+uuid = { version = "1.1.2", features = ["v4"] }
 x509-parser = "0.13.2"
 
 [dev-dependencies]
 pretty_assertions = "1.2.1"
-tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"]}
+tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
