--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -18,21 +18,21 @@ repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-j
 readme = "README.md"
 
 [dependencies]
-async-trait = "0.1.53"
+async-trait = "0.1.56"
 base64 = "0.13.0"
 bytes = "1.1.0"
-ipnet = "2.4.0"
+ipnet = "2.5.0"
 iprange = "0.6.7"
 libunftp = { version="0.18.4", path="../../"}
 ring = "0.16.20"
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = { version = "1.0.79" }
-tokio = { version = "1.17.0", features = ["rt", "time"]}
-tracing = { version = "0.1.34", default-features = false }
-tracing-attributes = "0.1.20"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
+tokio = { version = "1.19.2", features = ["rt", "time"] }
+tracing = { version = "0.1.35", default-features = false }
+tracing-attributes = "0.1.21"
 valid = "0.3.1"
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
-tokio = { version = "1.17.0", features = ["macros"]}
+tokio = { version = "1.19.2", features = ["macros"] }
 unftp-sbe-fs = { version="0.2", path="../unftp-sbe-fs"}
