--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -18,20 +18,20 @@ repository = "https://github.com/bolcom/libunftp/tree/hannes/crates/unftp-auth-r
 readme = "README.md"
 
 [dependencies]
-async-trait = "0.1.53"
-hyper = { version = "0.14.18", features= ["client", "runtime", "stream", "http1"]}
-hyper-rustls = { version = "0.23.0"}
+async-trait = "0.1.56"
+hyper = { version = "0.14.19", features = ["client", "runtime", "stream", "http1"] }
+hyper-rustls = "0.23.0"
 libunftp = { version="0.18.4", path="../../"}
-percent-encoding = { version = "2.1.0"}
-regex = "1.5.5"
-serde = { version = "1.0.136", features = ["derive"] }
-serde_json = { version = "1.0.79"}
-tokio = { version = "1.17.0", features = ["rt", "net", "sync", "io-util", "time"] }
-tracing = { version = "0.1.34", default-features = false }
-tracing-attributes = "0.1.20"
+percent-encoding = "2.1.0"
+regex = "1.5.6"
+serde = { version = "1.0.137", features = ["derive"] }
+serde_json = "1.0.81"
+tokio = { version = "1.19.2", features = ["rt", "net", "sync", "io-util", "time"] }
+tracing = { version = "0.1.35", default-features = false }
+tracing-attributes = "0.1.21"
 
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
-tokio = { version = "1.17.0", features = ["macros"] }
+tokio = { version = "1.19.2", features = ["macros"] }
 unftp-sbe-fs = { version="0.2", path="../unftp-sbe-fs"}
