--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -30,6 +30,7 @@ mime = "0.3.16"
 percent-encoding = "2.2.0"
 serde = { version = "1.0.145", features = ["derive"] }
 serde_json = "1.0.85"
+time = "0.3.15"
 tokio = { version = "1.21.1", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.10"
 tokio-util = { version = "0.7.4", features = ["codec", "compat"] }
