--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,6 +54,7 @@ tracing = { version = "0.1.37", default-features = false }
 tracing-attributes = "0.1.23"
 uuid = { version = "1.3.0", features = ["v4"] }
 x509-parser = "0.14.0"
+dashmap = "5.4.0"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
