--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ tracing-attributes = "0.1.24"
 uuid = { version = "1.3.3", features = ["v4"] }
 x509-parser = "0.14.0"
 dashmap = "5.4.0"
+libc = "0.2"
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
