libunftp-sbe-fs: capability-mode compliance
When a process runs in capability mode, as with Capsicum, it loses all
access to global namespaces.  So for example, functions like open()
don't work.  Instead, openat() may used.

This commit replaces all global filesystem accesses in libunftp-sbe-fs
with relative accesses, making it compliant with capability mode.

The new cap_fs module is a 1:1 replacement for tokio::fs.  The code
could be simplified, and some runtime allocations removed, by inlining
this module into libunftp-sbe-fs::Filesystem.  However, I've left it
separate for now to minimize diffs.

--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -21,7 +21,9 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.75"
 cfg-if = "1.0"
+cap-std = "2.0"
 futures = { version = "0.3.29", default-features = false, features = ["std"] }
+lazy_static = "1.4.0"
 libunftp = { version="0.19.1", path="../../"}
 path_abs = "0.5.1"
 tokio = { version = "1.35.1", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
