--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -34,6 +34,7 @@ async_ftp = "6.0.0"
 more-asserts = "0.3.1"
 pretty_assertions = "1.3.0"
 pretty_env_logger = "0.4.0"
+rstest = "0.18.1"
 slog-async = "2.7.0"
 slog-term = "2.9.0"
 tempfile = "3.5.0"
