--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -33,17 +33,19 @@ tracing-attributes = "0.1.27"
 
 [dev-dependencies]
 async_ftp = "6.0.0"
+async-trait = "0.1.73"
 more-asserts = "0.3.1"
 pretty_assertions = "1.4.0"
 pretty_env_logger = "0.5.0"
 rstest = "0.18.2"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 slog-async = "2.8.0"
 slog-term = "2.9.0"
 tempfile = "3.8.1"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.18"
 getrandom = "0.2.11"
-unftp-auth-jsonfile = { path = "../unftp-auth-jsonfile" }
 
 [target.'cfg(target_os = "freebsd")'.dev-dependencies]
 capsicum = "0.2.0"
