--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -21,7 +21,9 @@ readme = "README.md"
 [dependencies]
 async-trait = "0.1.75"
 cfg-if = "1.0"
+cap-std = "2.0"
 futures = { version = "0.3.29", default-features = false, features = ["std"] }
+lazy_static = "1.4.0"
 libunftp = { version="0.19.1", path="../../"}
 path_abs = "0.5.1"
 tokio = { version = "1.35.1", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
@@ -31,13 +33,21 @@ tracing-attributes = "0.1.27"
 
 [dev-dependencies]
 async_ftp = "6.0.0"
+async-trait = "0.1.73"
 more-asserts = "0.3.1"
 pretty_assertions = "1.4.0"
 pretty_env_logger = "0.5.0"
 rstest = "0.18.2"
+serde = { version = "1.0.188", features = ["derive"] }
+serde_json = "1.0.107"
 slog-async = "2.8.0"
 slog-term = "2.9.0"
 tempfile = "3.8.1"
 tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.18"
 getrandom = "0.2.11"
+
+[target.'cfg(target_os = "freebsd")'.dev-dependencies]
+capsicum = { version = "0.3.0", features = ["casper"] }
+capsicum-net = { version = "0.1.0", features = ["tokio"], git = "https://github.com/asomers/capsicum-net", rev = "c6fc574" }
+
