Move lint defs to Cargo.toml
Since Rust [1.74.0](https://blog.rust-lang.org/2023/11/16/Rust-1.74.0.html)
lint configuration can be specified in the Cargo.toml file.

I've now done this and also enable lints on workspace level to ensure we
don't miss things.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,13 @@ members = [
     "crates/unftp-sbe-gcs"
 ]
 
+[workspace.lints.rust]
+unsafe_code = "deny"
+missing_docs = "deny"
+
+[workspace.lints.clippy]
+all = "deny"
+
 [dependencies]
 async-trait = "0.1.77"
 bitflags = "2.4.2"
@@ -63,7 +70,9 @@ pretty_assertions = "1.4.0"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs"}
 
-
 [patch.crates-io]
 capsicum = { git = "https://github.com/asomers/capsicum-rs", rev = "24330ee"}
 casper-sys = { git = "https://github.com/asomers/capsicum-rs", rev = "24330ee"}
+
+[lints]
+workspace=true
