--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -37,3 +37,6 @@ flate2 = "1.0.28"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.36.0", features = ["macros"] }
 unftp-sbe-fs = { version="0.2.2", path="../unftp-sbe-fs"}
+
+[lints]
+workspace = true
