--- a/crates/unftp-auth-pam/Cargo.toml
+++ b/crates/unftp-auth-pam/Cargo.toml
@@ -29,3 +29,6 @@ pam-auth = { package = "pam", version = "0.7.0" }
 
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["macros"] }
+
+[lints]
+workspace = true
