--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -35,3 +35,6 @@ tracing-attributes = "0.1.27"
 pretty_env_logger = "0.5.0"
 tokio = { version = "1.36.0", features = ["macros"] }
 unftp-sbe-fs = { version="0.2.2", path="../unftp-sbe-fs"}
+
+[lints]
+workspace = true
