--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -34,6 +34,7 @@ tracing-attributes = "0.1.27"
 [dev-dependencies]
 async_ftp = "6.0.0"
 async-trait = "0.1.80"
+chrono = "0.4.0"
 more-asserts = "0.3.1"
 nix = { version = "0.29.0", default-features = false, features = ["user"] }
 pretty_assertions = "1.4.0"
