--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unftp-auth-rest"
-version = "0.2.4"
-description = "An authenticator back-end for libunftp that consumes an HTTP API to authenticate"
+version = "0.2.6"
+description = "An authentication back-end for libunftp that consumes an HTTP API to authenticate"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
