--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -50,8 +50,8 @@ tracing-subscriber = "0.3.18"
 getrandom = "0.2.15"
 
 [target.'cfg(target_os = "freebsd")'.dev-dependencies]
-capsicum = { version = "0.3.0", features = ["casper"] }
-capsicum-net = { version = "0.1.0", features = ["tokio"], git = "https://github.com/asomers/capsicum-net", rev = "c6fc574" }
+capsicum = { version = "0.4.0", features = ["casper"] }
+capsicum-net = { version = "0.1.0", features = ["tokio"] }
 
 [lints]
 workspace = true
