--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Run tests
         run: >
           cargo test 
-          --verbose --workspace
+          --verbose --workspace --exclude 'unftp-sbe-gcs*'
       - name: Doc tests
         run: cargo test --doc --workspace
       - name: Build Examples
