--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -18,29 +18,31 @@ repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gc
 readme = "README.md"
 
 [dependencies]
-async-trait = "0.1.83"
-base64 = "0.21.7"
+async-trait = "0.1.85"
+base64 = "0.22.1"
 bytes = "1.9.0"
 chrono = { version = "0.4.39", default-features = false, features = ["std", "serde"] }
 futures = { version = "0.3.31", default-features = false, features = ["std"] }
-hyper = { version = "0.14.31", features = ["client", "runtime", "stream", "http1"] }
-hyper-rustls = "0.24.2"
+http-body-util = "0.1.2"
+hyper = { version = "1.5.2", features = ["client", "http1"] }
+hyper-rustls = "0.27.5"
+hyper-util = "0.1.10"
 libunftp = { version = "0.20.3", path = "../../" }
 mime = "0.3.17"
 percent-encoding = "2.3.1"
-serde = { version = "1.0.216", features = ["derive"] }
-serde_json = "1.0.133"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.135"
 time = "0.3.37"
-tokio = { version = "1.42.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
+tokio = { version = "1.43.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.17"
 tokio-util = { version = "0.7.13", features = ["codec", "compat"] }
 tracing = { version = "0.1.41", default-features = false }
 tracing-attributes = "0.1.28"
-yup-oauth2 = "8.3.2"
+yup-oauth2 = { version = "11.0.0", default-features = false, features = ["hyper-rustls", "service-account", "aws-lc-rs"]}
 
 [dev-dependencies]
 async_ftp = "6.0.0"
-clap = { version = "3.2.25", features = ["env"] }
+clap = { version = "4.5.26", features = ["env"] }
 lazy_static = "1.5.0"
 more-asserts = "0.3.1"
 path_abs = "0.5.1"
@@ -50,6 +52,6 @@ slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_in
 slog-async = "2.8.0"
 slog-stdlog = "4.1.1"
 slog-term = "2.9.1"
-tempfile = "3.14.0"
-tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
+tempfile = "3.15.0"
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tracing-subscriber = "0.3.19"
