--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,11 @@ missing_docs = "deny"
 [workspace.lints.clippy]
 all = "deny"
 
+[features]
+ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
+aws-lc-rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
+default = ["aws-lc-rs"] 
+
 [dependencies]
 async-trait = "0.1.85"
 bitflags = "2.8.0"
@@ -50,7 +55,7 @@ moka = { version = "0.12.10", default-features = false, features = ["sync"] }
 nix = { version = "0.29.0", default-features = false, features = ["fs"] }
 prometheus = { version = "0.13.4", default-features = false }
 proxy-protocol = "0.5.0"
-rustls = "0.23.21"
+rustls = { version = "0.23.21", default-features = false }
 rustls-pemfile = "2.2.0"
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 slog-stdlog = "4.1.1"
