--- a/crates/unftp-sbe-fs/Cargo.toml
+++ b/crates/unftp-sbe-fs/Cargo.toml
@@ -18,13 +18,18 @@ homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
 repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-fs"
 readme = "README.md"
 
+[features]
+ring = ["libunftp/ring"]
+aws-ls-rs =  ["libunftp/aws-ls-rs"]
+default = ["aws-ls-rs"] 
+
 [dependencies]
 async-trait = "0.1.85"
 cfg-if = "1.0"
 cap-std = "3.4"
 futures = { version = "0.3.31", default-features = false, features = ["std"] }
 lazy_static = "1.5.0"
-libunftp = { version = "0.20.3", path = "../../" }
+libunftp = { version = "0.20.3", path = "../../", default-features = false }
 path_abs = "0.5.1"
 tokio = { version = "1.43.0", features = ["rt", "net", "sync", "io-util", "time", "fs"] }
 tokio-stream = "0.1.17"
