Hide ftps_manual behind a feature flag

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ all = "deny"
 [features]
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
 aws-lc-rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
+experimental = []
 default = ["aws-lc-rs"]
 
 [dependencies]
