Rename feature flags to be more idiomatic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,9 @@ all = "deny"
 
 [features]
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
-aws-lc-rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
+aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
 experimental = []
-default = ["aws-lc-rs"]
+default = ["aws_lc_rs"]
 
 [dependencies]
 async-trait = "0.1.88"
