--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,8 +39,10 @@ all = "deny"
 [features]
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
 aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
+prometheus = ["dep:prometheus"]
+proxy = ["dep:proxy-protocol"]
 experimental = []
-default = ["aws_lc_rs"]
+default = ["aws_lc_rs", "prometheus", "proxy"]
 
 [dependencies]
 async-trait = "=0.1.88"
@@ -54,8 +56,8 @@ lazy_static = "1.5.0"
 md-5 = "0.10.6"
 moka = { version = "0.12.11", default-features = false, features = ["sync"] }
 nix = { version = "0.29.0", default-features = false, features = ["fs"] }
-prometheus = { version = "0.14.0", default-features = false }
-proxy-protocol = "0.5.0"
+prometheus = { version = "0.14.0", default-features = false, optional = true }
+proxy-protocol = { version = "0.5.0", optional = true }
 rustls = { version = "0.23.35", default-features = false }
 rustls-pemfile = "2.2.0"
 slog = { version = "2.8.2", features = ["max_level_trace", "release_max_level_info"] }
