--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -23,7 +23,7 @@ base64 = "0.22.1"
 bytes = "1.11.0"
 ipnet = "2.11.0"
 iprange = "0.6.7"
-libunftp = { version = "0.21.0", path = "../../" }
+libunftp = { version = "0.21.0", path = "../../", default-features = false }
 ring = "0.17.14"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
