--- a/crates/unftp-auth-rest/Cargo.toml
+++ b/crates/unftp-auth-rest/Cargo.toml
@@ -23,7 +23,7 @@ http-body-util = "0.1.3"
 hyper = { version = "1.8.1", features = ["client", "http1"] }
 hyper-rustls = "0.27.7"
 hyper-util = "0.1.19"
-libunftp = { version = "0.21.0", path = "../../" }
+libunftp = { version = "0.21.0", path = "../../", default-features = false }
 percent-encoding = "2.3.2"
 regex = "1.12.2"
 serde = { version = "1.0.228", features = ["derive"] }
