--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -27,7 +27,7 @@ http-body-util = "0.1.3"
 hyper = { version = "1.8.1", features = ["client", "http1"] }
 hyper-rustls = "0.27.7"
 hyper-util = "0.1.19"
-libunftp = { version = "0.21.0", path = "../../" }
+libunftp = { version = "0.21.0", path = "../../", default-features = false }
 mime = "0.3.17"
 percent-encoding = "2.3.2"
 serde = { version = "1.0.228", features = ["derive"] }
