--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,9 +40,10 @@ all = "deny"
 ring = ["rustls/ring", "rustls/logging", "rustls/std", "rustls/tls12"]
 aws_lc_rs = ["rustls/aws_lc_rs", "rustls/logging", "rustls/std", "rustls/tls12"]
 prometheus = ["dep:prometheus"]
-proxy = ["dep:proxy-protocol"]
+proxy_protocol = ["dep:proxy-protocol"]
 experimental = []
-default = ["aws_lc_rs", "prometheus", "proxy"]
+default = ["aws_lc_rs"]
+all = ["aws_lc_rs", "prometheus", "proxy_protocol"]
 
 [dependencies]
 async-trait = "=0.1.88"
@@ -74,6 +75,7 @@ dashmap = "6.1.0"
 libc = "0.2"
 
 [dev-dependencies]
+libunftp = { path = ".", features = ["all"] }
 pretty_assertions = "1.4.1"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 unftp-sbe-fs = { path = "../libunftp/crates/unftp-sbe-fs" }
