--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unftp-sbe-gcs"
 description = "A storage back-end for libunftp, storing files in Google Cloud Storage (GCS)"
-version = "0.2.8"
+version = "0.2.9"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -16,6 +16,11 @@ documentation = "https://docs.rs/unftp-sbe-gcs"
 homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
 repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
 readme = "README.md"
+
+[features]
+default = ["aws_lc_rs"]
+aws_lc_rs = ["libunftp/aws_lc_rs"]
+ring = ["libunftp/ring"]
 
 [dependencies]
 async-trait = "0.1.88"
