Let back-ends depend on an SPI
This split moves the backend-facing API surface into a dedicated crate such that
unftp-sbe-* and unftp-auth-* back-ends/plugins/extentions only depend on
this new crate called `unftp-core`.

The name reflects its role as the common dependency and contract for libunftp and
all backend implementations, while avoiding lib* or Java-ish SPI-style naming that
is uncommon in the Rust ecosystem. This keeps the public surface clear, idiomatic,
and consistent with existing unftp-* crates.

Why this change:

- Backends shouldn’t force libunftp feature flags or crypto provider choices which
  was becoming awkward.
- A stable interface crate lets backends evolve independently of server internals
  i.e. back-ends don't need to go to a new version if some server implementation
  bug was fixed.
- Smaller dependency graphs for backends reduce compile times and rebuild scope

What I did:

- Introduced the `unftp-core` crate with auth/storage traits, errors, and helper types
- Switched auth and storage backends to depend on `unftp-core`.
- Updated examples and docs to use `ServerBuilder` instead of `ServerExt` -
  `ServerExt` unfortunately had to go cause it caused a dependency for back-ends on
  libunftp again.

--- a/crates/unftp-auth-jsonfile/Cargo.toml
+++ b/crates/unftp-auth-jsonfile/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "unftp-auth-jsonfile"
-version = "0.3.7"
+version = "0.4.0"
 description = "An authentication back-end for libunftp that authenticates against credentials in JSON format"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
@@ -17,18 +17,13 @@ homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jso
 repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-auth-jsonfile"
 readme = "README.md"
 
-[features]
-default = ["aws_lc_rs"]
-aws_lc_rs = ["libunftp/aws_lc_rs"]
-ring = ["libunftp/ring"]
-
 [dependencies]
 async-trait.workspace = true
 base64.workspace = true
 bytes.workspace = true
 ipnet = "2.11.0"
 iprange = "0.6.7"
-libunftp.workspace = true
+unftp-core.workspace = true
 ring = "0.17.14"
 serde.workspace = true
 serde_json.workspace = true
@@ -39,9 +34,10 @@ valid = "0.3.1"
 flate2 = "1.1.9"
 
 [dev-dependencies]
+libunftp.workspace = true
 pretty_env_logger = "0.5.0"
 tokio = { workspace = true, features = ["macros"] }
-unftp-sbe-fs = { version = "0.3.0", path = "../unftp-sbe-fs" }
+unftp-sbe-fs = { version = "0.4.0", path = "../unftp-sbe-fs" }
 
 [lints]
 workspace = true
