--- a/crates/unftp-sbe-gcs/Cargo.toml
+++ b/crates/unftp-sbe-gcs/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "unftp-sbe-gcs"
 description = "A storage back-end for libunftp, storing files in Google Cloud Storage (GCS)"
-version = "0.2.9"
+version = "0.3.0"
 authors = [
     "Agoston Horvath <ahorvath@bol.com>",
     "Dávid Kosztka <dkosztka@bol.com>",
@@ -17,11 +17,6 @@ homepage = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
 repository = "https://github.com/bolcom/libunftp/tree/master/crates/unftp-sbe-gcs"
 readme = "README.md"
 
-[features]
-default = ["aws_lc_rs"]
-aws_lc_rs = ["libunftp/aws_lc_rs"]
-ring = ["libunftp/ring"]
-
 [dependencies]
 async-trait.workspace = true
 base64.workspace = true
@@ -32,14 +27,13 @@ http-body-util.workspace = true
 hyper.workspace = true
 hyper-rustls.workspace = true
 hyper-util.workspace = true
-libunftp.workspace = true
+unftp-core.workspace = true
 mime = "0.3.17"
 percent-encoding.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 time = "0.3.47"
 tokio = { workspace = true, features = ["rt", "net", "sync", "io-util", "time", "fs"] }
-tokio-stream.workspace = true
 tokio-util = { workspace = true, features = ["codec", "compat"] }
 tracing.workspace = true
 tracing-attributes.workspace = true
@@ -48,6 +42,7 @@ yup-oauth2 = { version = "12.1.2", default-features = false, features = ["hyper-
 [dev-dependencies]
 async_ftp = "6.0.0"
 clap = { version = "4.5.57", features = ["env"] }
+libunftp.workspace = true
 lazy_static.workspace = true
 more-asserts = "0.3.1"
 path_abs = "0.5.1"
